[gd_scene load_steps=9 format=3 uid="uid://bpswapa8bav1j"]

[ext_resource type="Script" path="res://Scenes/UI/upgrade_screen.gd" id="1_dbpad"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="1_qfluo"]
[ext_resource type="FontFile" uid="uid://c46se1ng4idp" path="res://Assets/UI/joystix monospace.otf" id="2_h6alg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bhxtq"]
shader = ExtResource("1_qfluo")
shader_parameter/lod = 0.0

[sub_resource type="Theme" id="Theme_nvu82"]
default_font = ExtResource("2_h6alg")

[sub_resource type="Animation" id="Animation_bos7q"]
resource_name = "Blur"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}

[sub_resource type="Animation" id="Animation_ciiq5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8hjtu"]
_data = {
"Blur": SubResource("Animation_bos7q"),
"RESET": SubResource("Animation_ciiq5")
}

[node name="UpgradeScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dbpad")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bhxtq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nvu82")
alignment = 1

[node name="TopSeparator" type="HSeparator" parent="Panel/ScreenContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75

[node name="PickLabel" type="Label" parent="Panel/ScreenContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 35
text = "Pick upgrade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopSeparator2" type="HSeparator" parent="Panel/ScreenContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="UpgradesContainer" type="HBoxContainer" parent="Panel/ScreenContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 20
alignment = 1

[node name="BotSeparator" type="HSeparator" parent="Panel/ScreenContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8hjtu")
}
